hphp/test/zend/bad/ext/standard/tests/general_functions/var_export_basic9.php
<?php
	$x = new stdClass();
	$x->{'\'\\'} = 7;
	echo var_export($x);